--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  sidebarx: ^0.17.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
